Fixed incorrect reference

--- a/DFC.App.MatchSkills.WebUI/Views/EntryChoice/Head.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/EntryChoice/Head.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dfc.App.MatchSkills.ViewModels.HeadViewModel
+﻿@model DFC.App.MatchSkills.WebUI.ViewModels.HeadViewModel
 
 @if (!string.IsNullOrWhiteSpace(Model.Title))
 {
