--- a/DFC.App.MatchSkills.WebUI/Views/Shared/_ViewImports.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/Shared/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@using DFC.App.MatchSkills.WebUI.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, DFC.Personalisation.CommonUI
