--- a/DFC.App.MatchSkills.WebUI/Views/_ViewImports.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using DFC.App.MatchSkills.WebUI.ViewModels
+﻿@using DFC.Personalisation.CommonUI
+@using DFC.App.MatchSkills.WebUI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DFC.Personalisation.CommonUI
