Startup cleanup, and implemented button tags

--- a/DFC.App.MatchSkills.WebUI/Views/EntryChoice/Body.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/EntryChoice/Body.cshtml
@@ -48,7 +48,7 @@
                 </fieldset>
             </div>
             <p>
-                <a class="choice-button govuk-button" href="#">Continue</a>
+                <govukButton text="Continue" href="#"></govukButton>
             </p>
         </div>
     </div>
