--- a/DFC.App.MatchSkills.WebUI/Views/EntryChoice/Body.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/EntryChoice/Body.cshtml
@@ -1,4 +1,4 @@
-﻿<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+﻿<div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-body-wrapper">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <div class="govuk-form-group choice-page">
@@ -52,4 +52,4 @@
             </p>
         </div>
     </div>
-</main>
+</div>
