--- a/DFC.App.MatchSkills.WebUI/Views/Index/Body.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/Index/Body.cshtml
@@ -1,5 +1,4 @@
-﻿
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+﻿<div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-body-wrapper">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <govukHeadingH1 text="Transfer your skills"></govukHeadingH1>
@@ -18,23 +17,8 @@
                 You can enter your current or previous jobs and see which skills you can transfer to other jobs and industries.
             </p>
             <p>
-                <govukButton text="Continue" href="/MatchSkills/EntryChoice"></govukButton>
+                <govukStartButtonLink linkText="Continue" LinkHref="/MatchSkills/EntryChoice"></govukStartButtonLink>
             </p>
         </div>
     </div>
-    <script>
-
-        const countries = [
-            'France',
-            'Germany',
-            'United Kingdom'
-        ]
-
-        accessibleAutocomplete({
-            element: document.querySelector('#my-autocomplete-container'),
-            id: 'my-autocomplete', // To match it to the existing <label>.
-            source: countries
-        })
-    </script>
-    <script type="text/javascript" src="/public/javascripts/accessible-autocomplete.min.js"></script>
-</main>
+</div>
