Fix for missing id

--- a/DFC.App.MatchSkills.WebUI/Views/EntryChoice/Body.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/EntryChoice/Body.cshtml
@@ -48,7 +48,7 @@
                 </fieldset>
             </div>
             <p>
-                <govukButton text="Continue" href="#"></govukButton>
+                <govukButton id="EntryChoiceButtonContinue" text="Continue" href="#"></govukButton>
             </p>
         </div>
     </div>
