--- a/DFC.App.MatchSkills.WebUI/Views/OccupationSearch/Body.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/OccupationSearch/Body.cshtml
@@ -7,18 +7,19 @@
             
             <p>You can add skills from more than one job to your skills list.</p>
             
-            <form  action="/matchskills/occupationsearchresults"  method="get"  id="occupation-search">
+            <form action="/matchskills/occupationsearchresults" method="get" id="occupation-search">
 
                 <govukHeadingH4 Text="Enter a job title" />
-                
-                <govukTextInput Id="search"></govukTextInput>
+
+                <govukTextInput Id="inputSearch"></govukTextInput>
                 <br>
                 <br>
+                <!--<govukCheckbox Id="chkAltLabels" Text="Match Alt Labels"></govukCheckbox>-->
                 <p>
-                    <govukButton text="Search" ></govukButton>
+                    <govukButton Id="btnSearch" text="Search"></govukButton>
                 </p>
-            
-                </form>
+
+            </form>
         </div>
     </div>
 </main>
