--- a/DFC.App.MatchSkills.WebUI/Views/OccupationSearchResults/Body.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/OccupationSearchResults/Body.cshtml
@@ -17,7 +17,7 @@
 
             @await Component.InvokeAsync(nameof(DFC.App.MatchSkills.WebUI.ViewComponents.SearchOccupationResults), new { occupation = @search,altLabels =false})
             <br />
-            <govukButton text="Add to skills list"></govukButton>
+            <govukButton text="Select"></govukButton>
         </div>
     </div>
 </main>
