--- a/DFC.App.MatchSkills.WebUI/Views/OccupationSearch/Body.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/OccupationSearch/Body.cshtml
@@ -11,12 +11,12 @@
 
                 <govukHeadingH4 Text="Enter a job title" />
 
-                <govukTextInput Id="inputSearch"></govukTextInput>
+                <govukTextInput Id="EnterJobInputSearch"></govukTextInput>
                 <br>
                 <br>
-                <!--<govukCheckbox Id="chkAltLabels" Text="Match Alt Labels"></govukCheckbox>-->
+                    <govukCheckbox Id="EnterJobChkAltLabels" Text="Match Alt Labels"></govukCheckbox>
                 <p>
-                    <govukButton Id="btnSearch" text="Search"></govukButton>
+                    <govukButton Id="EnterJobBtnSearch" text="Search"></govukButton>
                 </p>
 
             </form>
