--- a/DFC.App.MatchSkills.WebUI/Views/OccupationSearch/Body.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/OccupationSearch/Body.cshtml
@@ -12,13 +12,13 @@
                 <govukHeadingH4 Text="Enter a job title" />
 
                 <govukTextInput Id="EnterJobInputSearch"></govukTextInput>
-                <br>
-                <br>
-                    <govukCheckbox Id="EnterJobChkAltLabels" Text="Match Alt Labels"></govukCheckbox>
-                <p>
-                    <govukButton Id="EnterJobBtnSearch" text="Search"></govukButton>
-                </p>
-
+                <br/>
+                <br/>
+                <govukCheckbox Id="EnterJobChkAltLabels" Label="Match Alt Labels"></govukCheckbox>
+                <br />
+                <govukButton Id="EnterJobBtnSearch" Text="Search"></govukButton>
+                
+                
             </form>
         </div>
     </div>
