--- a/DFC.App.MatchSkills.WebUI/Views/EmploymentChoice/Head.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/EmploymentChoice/Head.cshtml
@@ -1,26 +1,5 @@
-﻿@model DFC.App.MatchSkills.WebUI.ViewModels.HeadViewModel
-
-@{ ViewData["Title"] = "Match Skills";}
+﻿@{ ViewData["Title"] = "Match Skills";}
 
 <title>Entry Choice</title>
 
 
-@if (!string.IsNullOrWhiteSpace(Model.CanonicalUrl))
-{
-    <link rel="canonical" href="@Model.CanonicalUrl">
-}
-
-@if (!string.IsNullOrWhiteSpace(Model.Description))
-{
-    <meta name="description" content="@Model.Description">
-}
-
-@if (!string.IsNullOrWhiteSpace(Model.Description))
-{
-    <meta name="keywords" content="@Model.Keywords">
-}
-
-@if (!string.IsNullOrWhiteSpace(Model.CssLink))
-{
-    <link href="@Model.CssLink" rel="stylesheet" type="text/css" />
-}
