Updated project structure

--- a/DFC.App.MatchSkills.WebUI/Views/Home/Head.cshtml
+++ b/DFC.App.MatchSkills.WebUI/Views/Home/Head.cshtml
@@ -1,3 +1,6 @@
-﻿@{ ViewData["Title"] = "Match Skills";}
+﻿@model DFC.App.MatchSkills.WebUI.ViewModels.HeadViewModel;
+@{
+    ViewData["Title"] = "Match Skills";
+}
 
-<title>Match Skills</title>
+<title>@Model.PageTitle</title>
