Changed Main to Div

--- a/DFC.App.MatchSkills/Views/OccupationSearchResults/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/OccupationSearchResults/Body.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<main class="govuk-main-wrapper " id="main-content" role="main">
+<div class="govuk-main-wrapper " id="main-content" role="main">
 
 <div class="govuk-grid-row margin-reset">
     <div class="govuk-grid-column-two-thirds">
@@ -18,4 +18,4 @@
         <govukButton Id="JobSearchResultsBtnSelecOccupation" Text="Select"></govukButton>
     </div>
 </div>
-</main>
+</div>
