Changes required after mere

--- a/DFC.App.MatchSkills/Views/Home/Head.cshtml
+++ b/DFC.App.MatchSkills/Views/Home/Head.cshtml
@@ -1,4 +1,4 @@
-﻿@model DFC.App.MatchSkills.WebUI.ViewModels.HeadViewModel;
+﻿@model DFC.App.MatchSkills.ViewModels.HeadViewModel;
 @{
     ViewData["Title"] = "Match Skills";
 }
