--- a/DFC.App.MatchSkills/Views/_ViewImports.cshtml
+++ b/DFC.App.MatchSkills/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using DFC.Personalisation.CommonUI
-@using DFC.App.MatchSkills.WebUI
+@using DFC.App.MatchSkills
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DFC.Personalisation.CommonUI
