Added Unit Tests

--- a/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
@@ -56,7 +56,7 @@
 
         $.ajax({
             type: 'GET',
-            url: '@Model.SearchService',
+            url: '@Model.SearchService/OccupationSearchAuto',
             contentType: "application/json;charset=utf-8",
             dataType: "json",
             data: { occupation: query },
