Updated tests for ViewComponents

--- a/DFC.App.MatchSkills/ViewComponents/Choice/ChoiceComponent.cshtml
+++ b/DFC.App.MatchSkills/ViewComponents/Choice/ChoiceComponent.cshtml
@@ -22,6 +22,6 @@
                 </govukRadioButton>
             }
         </fieldset>
-        <govukButton text="@Model.ButtonText" id="@($"{Model.PageId}govukButton{Model.Text}")" disabled="false"></govukButton>
+        <govukButton text="@Model.ButtonText" id="@($"{Model.PageId}govukButton{Model.ButtonText}")" disabled="false"></govukButton>
     </form>
 </div>
