--- a/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
@@ -68,6 +68,8 @@
                     alert('Not connect.\n Verify Network.');
                 } else if (jqXHR.status == 404) {
                     alert('Requested page not found. [404]');
+                } else if (jqXHR.status == 500) {
+                    
                 } else if (exception === 'parsererror') {
                     alert('Requested JSON parse failed.');
                 } else if (exception === 'timeout') {
