Button and bullet points updated

--- a/DFC.App.MatchSkills/Views/Home/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Home/Body.cshtml
@@ -8,15 +8,12 @@
                     Answer questions about yourself to see the types of work that
                     might suit you.
                 </p>
-                <p>
-                    This can be useful if you're:
-                </p>
-                <p>
-                    - thinking about transferring your skills to a new career<br>
-                    - exploring career options for your future<br>
-                    - looking to return to work after a break
-                </p>
-                <govukButtonLink id="startButtonLinkStartButton" linkText="Start now" LinkHref="/MatchSkills/Worked"></govukButtonLink>
+                <govukBulletedList text="This can be useful if you're:">
+                    <govUkListItem text="thinking about transferring your skills to a new career"></govUkListItem>
+                    <govUkListItem text="exploring career options for your future"></govUkListItem>
+                    <govUkListItem text="looking to return to work after a break"></govUkListItem>
+                </govukBulletedList>
+                <govukStartButtonLink id="startButtonLinkStartButton" linkText="Start now" LinkHref="/MatchSkills/Worked"></govukStartButtonLink>
             </div>
         </div>
     </div>
