--- a/DFC.App.MatchSkills/ViewComponents/Choice/ChoiceComponent.cshtml
+++ b/DFC.App.MatchSkills/ViewComponents/Choice/ChoiceComponent.cshtml
@@ -4,11 +4,11 @@
 @addTagHelper *, DFC.Personalisation.CommonUI
 
 <div class="govuk-form-group">
-    <form method="post" id="@($"{@Model.PageId}_Form_RadioForm")">
+    <form method="post" id="@($"{@Model.PageId}FormRadioForm")" action="@Model.FormAction">
         <fieldset class="govuk-fieldset govuk-!-margin-bottom-6">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
 
-                <govukHeadingH1 text="Have you worked before?" additional-class="govuk-fieldset__heading"></govukHeadingH1>
+                <govukHeadingH1 text="@Model.Title" additional-class="govuk-fieldset__heading"></govukHeadingH1>
             </legend>
             <span id="sign-in-hint" class="govuk-hint">
                 @Model.Text
@@ -17,8 +17,12 @@
 
             @foreach (var radioButton in Model.RadioButtons)
             {
-                <govukRadioButton id="@($"{Model.PageId}govukRadioButtonRadio{radioButton.Text}")" name="@radioButton.Name" value="@radioButton.Text">
-                    <govukRadioLabel text="@radioButton.Text"></govukRadioLabel>
+                <govukRadioButton id="@($"{Model.PageId}govukRadioButtonRadio{radioButton.Text}")" name="@radioButton.Name" value="@radioButton.Value">
+                    <govukRadioLabel text="@radioButton.Text" for="@($"{Model.PageId}govukRadioButtonRadio{radioButton.Text}")"></govukRadioLabel>
+                    @if (!string.IsNullOrEmpty(radioButton.HintText))
+                    {
+                        <govukRadioHint hint-text="@radioButton.HintText" id="@($"{Model.PageId}govukRadioHint{radioButton.Text}")"></govukRadioHint>
+                    }
                 </govukRadioButton>
             }
         </fieldset>
