--- a/DFC.App.MatchSkills/Views/Home/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Home/Body.cshtml
@@ -1,9 +1,9 @@
-﻿<div class="govuk-main-wrapper ">
+﻿@model DFC.App.MatchSkills.ViewModels.Home.HomeCompositeViewModel
 
+<div class="govuk-main-wrapper ">
     <div class="govuk-width-container">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-
                 <p>
                     Answer questions about yourself to see the types of work that
                     might suit you.
@@ -16,9 +16,11 @@
                     - exploring career options for your future<br>
                     - looking to return to work after a break
                 </p>
-                <govukButtonLink id="startButtonLinkStartButton" linkText="Start now" LinkHref="/MatchSkills/Worked"></govukButtonLink>
+                <govukButtonLink id="@Model.GetElementId("GovukButtonLink","Start")" linkText="Start now" LinkHref="@Model.CompositeSettings.Path/worked"></govukButtonLink>
             </div>
         </div>
     </div>
-
 </div>
+
+
+
