--- a/DFC.App.MatchSkills/Views/Home/BodyTop.cshtml
+++ b/DFC.App.MatchSkills/Views/Home/BodyTop.cshtml
@@ -1,13 +1,7 @@
-﻿<div class="govuk-width-container margin-reset">
-    <div class="govuk-phase-banner">
-        <p class="govuk-phase-banner__content">
-            <strong class="govuk-tag govuk-phase-banner__content__tag">
-                beta
-            </strong>
-            <span class="govuk-phase-banner__text">
-                This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-            </span>
-        </p>
-    </div>
+﻿@using DFC.App.MatchSkills.ViewModels
+@model DFC.App.MatchSkills.ViewModels.CompositeViewModel
+
+<partial name="~/Views/Shared/BodyTop.cshtml" />
+<div class="primary-hero">
+    <govukPrimaryHeroBanner headerText="@CompositeViewModel.AppTitle"></govukPrimaryHeroBanner>
 </div>
-<govUkPrimaryHeroBanner headerText="Discover your skills and careers"></govUkPrimaryHeroBanner>
