--- a/DFC.App.MatchSkills/Views/Worked/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Worked/Body.cshtml
@@ -6,9 +6,9 @@
         ButtonText = "Continue",
         LinkText = "TestLink",
         PageId = "Worked",
-        Text = "Choose one of the options below.",
+        Text = "Choose one of the options below",
         FormAction = "body/Worked",
-        Title = "Have you worked before",
+        Title = "Have you worked before?",
         RadioButtons = new List<RadioButtonModel>
 {
             {new RadioButtonModel {Text = "Yes", Order = 1, Name = "Choice", Value = "Yes"}},
