--- a/DFC.App.MatchSkills/Views/Route/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Route/Body.cshtml
@@ -10,6 +10,7 @@
         Text = "Choose one of the options below.",
         Title = "What would you like your career matches to be based on?",
         FormAction = $"body/{Model.Id}",
+        ParentModel = Model,
         RadioButtons = new List<RadioButtonModel>
 {
     {
