--- a/DFC.App.MatchSkills/Views/Worked/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Worked/Body.cshtml
@@ -9,6 +9,7 @@
         Text = "Choose one of the options below",
         FormAction = "body/Worked",
         Title = "Have you worked before?",
+        ParentModel = Model,
         RadioButtons = new List<RadioButtonModel>
 {
             {new RadioButtonModel {Text = "Yes", Order = 1, Name = "Choice", Value = "Yes"}},
