Fixed styling issue with AutoComplete

--- a/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
@@ -18,7 +18,7 @@
                                    Element="occupations-autocomplete-container" Source="Suggest" FunctionName="AutoComplete"
                                    autoselect="false" confirmOnBlur="true" cssNameSpace="autocomplete"
                                    minLength="2" name="EnterJobInputAutocomplete">
-                    <govukAutocompleteLabel Text="Enter your job title" For="occupations-autocomplete"></govukAutocompleteLabel>
+                    <govukAutocompleteLabel Text="Enter your job title" additional-class="govuk-!-font-size-19 govuk-!-font-weight-bold" For="occupations-autocomplete"></govukAutocompleteLabel>
                    
                     
                 </govukAutoComplete>
