The full page width is being used - should be 2/3

--- a/DFC.App.MatchSkills/Views/Worked/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Worked/Body.cshtml
@@ -19,4 +19,8 @@
     };
 
 }
-<partial name="~/ViewComponents/Choice/ChoiceComponent.cshtml" model="choiceModel" />
+<div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-row">
+        <partial name="~/ViewComponents/Choice/ChoiceComponent.cshtml" model="choiceModel" />
+    </div>
+</div>
