--- a/DFC.App.MatchSkills/Views/Route/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Route/Body.cshtml
@@ -30,4 +30,8 @@
     };
 
 }
-<partial name="~/ViewComponents/Choice/ChoiceComponent.cshtml" model="choiceModel" />
+<div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-row">
+        <partial name="~/ViewComponents/Choice/ChoiceComponent.cshtml" model="choiceModel" />
+    </div>
+</div>
