--- a/DFC.App.MatchSkills/ViewComponents/Choice/ChoiceComponent.cshtml
+++ b/DFC.App.MatchSkills/ViewComponents/Choice/ChoiceComponent.cshtml
@@ -4,11 +4,11 @@
 @addTagHelper *, DFC.Personalisation.CommonUI
 
 <div class="govuk-form-group">
-    <form method="post" id="@($"{@Model.PageId}FormRadioForm")" action="@Model.FormAction">
+    <form method="post" id="@($"{@Model.ParentModel.Id}FormRadioForm")" action="@Model.FormAction">
         <fieldset class="govuk-fieldset govuk-!-margin-bottom-6">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
 
-                <govukHeadingH1 text="@Model.Title" additional-class="govuk-fieldset__heading"></govukHeadingH1>
+                <govukHeadingH1 text="@Model.ParentModel.PageHeading" additional-class="govuk-fieldset__heading"></govukHeadingH1>
             </legend>
             <span id="sign-in-hint" class="govuk-hint">
                 @Model.Text
