Fix Sonar HTML "bugs"

--- a/DFC.App.MatchSkills/Views/Matches/_CareerResult.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/_CareerResult.cshtml
@@ -6,7 +6,7 @@
         <p>@Model.JobProfile.Description</p>
     </div>
     <div class="ncs-progress govuk-clearfix">
-        <span class="ncs-progress__count "><b class="govuk-!-font-size-28">@Model.MatchStrengthPercentage%</b> <span class-="govuk-!-font-size-18"><b class="visually-hidden govuk-!-font-size-18 small">Skills match</b></span></span>
+        <span class="ncs-progress__count "><strong class="govuk-!-font-size-28">@Model.MatchStrengthPercentage%</strong> <span class-="govuk-!-font-size-18"><strong class="visually-hidden govuk-!-font-size-18 small">Skills match</strong></span></span>
         <div class="ncs-progress__bar"><span style="width: 85%"></span></div>
     </div>
     <partial name="_JobSectorGrowth"/>
