Updated Phase Banner

--- a/DFC.App.MatchSkills/Views/Shared/BodyTop.cshtml
+++ b/DFC.App.MatchSkills/Views/Shared/BodyTop.cshtml
@@ -1,5 +1,5 @@
 ﻿@model DFC.App.MatchSkills.ViewModels.CompositeViewModel
 
 <div class="govuk-width-container">
-    <govukPhaseBanner></govukPhaseBanner>
+    <govukPhaseBanner phase="Beta"></govukPhaseBanner>
 </div>
