--- a/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
@@ -6,7 +6,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="GetOccupationSkills"  method="post">
+            <form action="/matchskills/body/selectskills"  method="post">
                 <govukHeadingH1 Text="Enter your current or previous job title" />
 
                 <p>This can be your current job or one that you’ve done before. You can match the skills you used in this job to other careers.</p>
