--- a/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
@@ -17,56 +17,57 @@
                     </span>
                 </p>
             </div>
-
         </div>
-        <div class="govuk-width-container">
-            <a class="govuk-back-link" href="autocomplete.html">Back</a>
-            <div class="govuk-grid-row margin-reset">
-                <div class="govuk-grid-column-two-thirds">
+        <form action="/matchskills/addskills/selectskills" method="post">
 
-                    <br>
-                    <div class="results">
-                        <div class="govuk-form-group">
-                            <fieldset class="govuk-fieldset">
-                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                                    <h1 class="govuk-fieldset__heading--l govuk-!-margin-top-4">
-                                        @Model.PageHeading
-                                    </h1>
-                                </legend>
-                                <p>
-                                    These are some of the skills you may have used in the role of <strong>@Model.Occupation</strong>.
-                                </p>
-                                <p>
-                                    From the list below, select the skills that you would like to match to careers.
-                                </p>
-                                <p>
-                                    If you have a skill that you do not want to use for career matching, do not add it to your skills list.
-                                </p>
-                                
-                                <div class="govuk-checkboxes govuk-checkboxes--small skill-list-container checkbox-container">
-                                    @if (Model.Skills.Count == 0)
-                                    {
-                                        <govukLabel id="LblNoResults" Text="No required skills found"></govukLabel>
-                                    }
-                                    @foreach (var skill in Model.Skills)
-                                    {
-                                        <govukCheckbox id="@Model.Id" label="@skill.Name" value="@skill.Id" AdditionalClass="checkbox-container-item"></govukCheckbox>
+            <div class="govuk-width-container">
+                <a class="govuk-back-link" href="autocomplete.html">Back</a>
+                <div class="govuk-grid-row margin-reset">
+                    <div class="govuk-grid-column-two-thirds">
 
-                                    }
-                                    
-                                </div>
-                            </fieldset>
+                        <br>
+                        <div class="results">
+                            <div class="govuk-form-group">
+                                <fieldset class="govuk-fieldset">
+                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                                        <h1 class="govuk-fieldset__heading--l govuk-!-margin-top-4">
+                                            @Model.PageHeading
+                                        </h1>
+                                    </legend>
+                                    <p>
+                                        These are some of the skills you may have used in the role of <strong>@Model.Occupation</strong>.
+                                    </p>
+                                    <p>
+                                        From the list below, select the skills that you would like to match to careers.
+                                    </p>
+                                    <p>
+                                        If you have a skill that you do not want to use for career matching, do not add it to your skills list.
+                                    </p>
+
+                                    <div class="govuk-checkboxes govuk-checkboxes--small skill-list-container checkbox-container">
+                                        @if (Model.Skills.Count == 0)
+                                        {
+                                            <govukLabel id="LblNoResults" Text="No required skills found"></govukLabel>
+                                        }
+                                        @foreach (var skill in Model.Skills)
+                                        {
+                                            <govukCheckbox id="@Model.Id" label="@skill.Name" value="@skill.Id" AdditionalClass="checkbox-container-item"></govukCheckbox>
+
+                                        }
+
+                                    </div>
+                                </fieldset>
+                            </div>
                         </div>
+                        <button id="SelectSkillsButtonAddToSkillsList" class="govuk-button  govuk-button--secondary">Add to skills list</button>
+                        
+
                     </div>
-                    
-                    <a class="govuk-button trigger-button" href="your-skills.html">Add to skills list</a>
 
                 </div>
-
             </div>
-        </div>
 
-
+        </form>
 
 
     </div>
